--- a/src/index.css
+++ b/src/index.css
@@ -310,6 +310,37 @@ header {
   margin: 2rem 0;
 }
 
+.contact-input-felid {
+  margin-bottom: 4rem;
+}
+
+.conatct-rightside form.form-control {
+  border: 1px solid #ced4da;
+  border-radius: 0.5rem;
+  font-size: 1.6rem;
+  padding-left: 1rem;
+  font-weight: lighter;
+  height: 5rem;
+}
+
+.conatct-rightside form .form-check-input {
+  width: 2rem;
+  height: 2rem;
+}
+
+.form-chekbox-style {
+  margin: 4rem 0;
+}
+
+.conatct-rightside form .main-hero-para {
+  font-size: 1.5rem;
+  color: var(--text-color);
+  margin: 0;
+  font-weight: lighter;
+  width: 75%;
+  padding: 0 2rem;
+}
+
 @media (min-width:1400px) {
   .service-container .col-xxl-4 {
     flex: 0 0 auto;
@@ -327,3 +358,74 @@ header {
 }
 
 /*--------------service section ends*/
+/*--------------Contact section start*/
+.contactus-section {
+  margin: 15rem 0;
+}
+
+.conatct-leftside img {
+  min-width: 80%;
+  max-height: 30rem;
+  height: auto;
+}
+
+/*--------------Conatct section ends*/
+/*--------------Footer section start*/
+footer {
+  padding: 5rem 0;
+  background-color: #182334;
+  color: #fff;
+}
+
+footer h2 {
+  color: #fff;
+}
+
+footer li {
+  list-style: none;
+  font-size: 1.5rem;
+  font-weight: lighter;
+  color: #fff;
+  cursor: pointer;
+  margin: 1rem 0;
+}
+
+footer li:hover {
+  color: var(--primary-color);
+}
+
+footer .main-hero-para {
+  margin: 0;
+}
+
+footer .fontaweosome-style {
+  font-size: 2.3rem;
+  color: var(--primary-color);
+  background-color: transparent;
+  width: 0rem;
+  height: 0rem;
+  margin: 2rem 0;
+  cursor: pointer;
+}
+
+footer .fontaweosome-style:hover {
+  transition: all 1s;
+  animation: rotatefont 1s linear infinite alternate-reverse;
+  color: #fff;
+}
+
+@keyframes rotatefont {
+  0% {
+    transform: scale(0.6);
+  }
+
+  100% {
+    transform: scale(1.2);
+  }
+}
+
+footer .main-hero-para {
+  margin: 0;
+}
+
+/*--------------Footer section ends*/
